--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,7 +6,9 @@ LDFLAGS +=
 pkgdir                 = $(libdir)/enlightenment/modules/$(MODULE)/$(MODULE_ARCH)
 pkg_LTLIBRARIES        = module.la
 module_la_SOURCES      = \
-	e_mod_main.c
+	e_mod_main.c \
+	e_screen_reader_config.c \
+	e_screen_reader_gestures.c
 
 #if HAVE_WAYLAND_ONLY
 #module_la_SOURCES      += e_screen_reader_*.c \
